# sphinx-multilingual

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
sphinx_multilingual/: __init__.py
sphinx_multilingual.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
